--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -17,12 +17,12 @@ build:
 requirements:
   host:
     - pip
-    - python
+    - python >=2.7
   run:
     - attrs >=19.1.0,<20
     - docutils
     - od
-    - python
+    - python >=2.7
     - sigtools >=2.0
     - six
 
