--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -19,12 +19,11 @@ requirements:
     - pip
     - python >=2.7
   run:
-    - attrs >=19.1.0,<20
-    - docutils
+    - attrs >=19.1.0
+    - docutils >=0.17.0
     - od
     - python >=2.7
-    - sigtools >=2.0
-    - six
+    - sigtools >=4.0.1
 
 test:
   imports:
